# ConcentricInterpolation

./: .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  ConInterConfig.cmake  ConcentricInterpolation.doxy  LITERATURE  README  README.md
.github/workflows/: build_and_test.yaml  run-checks.yml
cmake/: ConInterConfig.cmake.in
data/directions/: D8_N10000_EQ.txt  D8_N5000_EQ.txt  README  README.txt
data/directions/demo/: dir_D3_N10000_EQ.txt  dir_D3_N256_s0_e0.txt  dir_D3_N512_s0_e0.txt
data/radii/: radii_10.txt  radii_15.txt  radii_4.txt  radii_50.txt
data/values/: CI_data_ETM_Nsuppdir100_Nsuppmag10_Jmax1.001.txt  CI_data_ETM_Nsuppdir100_Nsuppmag15_Jmax1.001.txt  CI_data_ETM_Nsuppdir200_Nsuppmag10_Jmax1.001.txt  D8_N1024from512_s-2_R5.txt  D8_N166from83_s-2_R4.txt  D8_N2638from1319_s-2_R5.txt  D8_N4096from2048_s-2_R4.txt  D8_N512from256_s-2_R4.txt  D8_N6_R50.txt  README  README.txt
examples/: CMakeLists.txt  Makefile  analytical_functions.cxx  analytical_functions.h  create_data.cxx  create_data.h  interpolation_demo.cxx  interpolation_demo_largestrain.cxx  plot_3d_data.gp
python/: CMakeLists.txt  concentric_interpolation_bindings.cxx  interpolation_demo.py
src/: CMakeLists.txt  Makefile  concentric_interpolation.cxx  concentric_interpolation.h  cubic_interpolant.cxx  cubic_interpolant.h  data.cxx  data.h  data_util.cxx  data_util.h  distance_functions.cxx  distance_functions.h  objective_functions.cxx  objective_functions.h  quadratic_interpolant.cxx  quadratic_interpolant.h  radial_interpolation.cxx  radial_interpolation.h  tangential_interpolation.cxx  tangential_interpolation.h  util.cxx  util.h
